SM-43 fix: changed border radius and padding on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -51,10 +51,6 @@ code {
   color: black;
 }
 
-.slick-slide img {
-  border-radius: 20px;
-}
-
 .slick-dots li button::before {
   font-size: 20px;
 }
